Update to new API.
