# src/main/docs/api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   description: SelfEducation
-  version: 1.0.8
+  version: 1.0.9
   title: SelfEducation
   termsOfService: 'http://swagger.io/terms/'
   license:
@@ -10,7 +10,7 @@ info:
 servers:
   # Added by API Auto Mocking Plugin
   - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/desoluy/SelfEducation/1.0.7
+    url: https://virtserver.swaggerhub.com/desoluy/SelfEducation/1.0.8
   - url: 'https://petstore.swagger.io/v2'
 paths:
   /register:
@@ -577,20 +577,7 @@ paths:
           schema:
             type: string
       requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                id:
-                  type: integer
-                  format: int64
-                  description: User id
-                role:
-                  $ref: "#/components/schemas/Role"
-              required:
-                - id
-                - role
+        $ref: '#/components/requestBodies/AssignRole'
       responses:
         "200":
           description: OK
@@ -1088,6 +1075,20 @@ components:
       required:
         - id
         - test
+    AssignRole:
+      type: object
+      properties:
+        userId:
+          type: integer
+          format: int64
+        courseId:
+          type: integer
+          format: int64
+        role:
+          $ref: "#/components/schemas/Role"
+      required:
+        - id
+        - role
   requestBodies:
     CourseSave:
       content:
@@ -1131,3 +1132,8 @@ components:
           schema:
             $ref: '#/components/schemas/AuthenticationToken'
       required: true
+    AssignRole:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/AssignRole'
